@@ -1,3 +1,11 @@
+2003-04-07  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* PersistenceServiceComponent.java: 
+	* BasePersistence.java:
+	Bug #2743 -- Dots and other characters printed to System.err/out
+	interfere with logging
+	Use logger.printDot instead of System.out.print.
+
 2003-03-21  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* PersistenceServiceComponent.java: 
